Changed name of generated library

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,7 @@ include $(TOPDIR)/rule.mk
 
 BINS=bilinearspeedtest rsaspeedtest generate_random suffixtest flinttest #libtest libtest1 libdirecttest 
 CFLAGS+=$(DCLXVI_INC) $(CRYPTOPP_INC) 
-LIBS=$(ASCLIB_FLG) $(DCLXVI_LIB_FLG) $(CRYPTOPP_LIB_FLG) $(GMP_LIB_FLG) -lcrypto -lflint -lmpfr
+LIBS=$(ACCUMLIB_FLG) $(DCLXVI_LIB_FLG) $(CRYPTOPP_LIB_FLG) $(GMP_LIB_FLG) -lcrypto -lflint -lmpfr
 all:	$(BINS)
 
 generate_random: generate_random.o
@@ -13,22 +13,22 @@ generate_random: generate_random.o
 flinttest: flinttest.o
 	$(CPP) $(CFLAGS) -o flinttest flinttest.o $(LIBS)
 
-bilinearspeedtest: bilinearspeedtest.o $(ASCLIB)
+bilinearspeedtest: bilinearspeedtest.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o bilinearspeedtest bilinearspeedtest.o $(LIBS)
 
-rsaspeedtest: rsaspeedtest.o $(ASCLIB)
+rsaspeedtest: rsaspeedtest.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o rsaspeedtest rsaspeedtest.o $(LIBS)
 
-suffixtest: suffixtest.o $(ASCLIB)
+suffixtest: suffixtest.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o suffixtest suffixtest.o $(LIBS)
 
-libtest: libtest.o $(ASCLIB)
+libtest: libtest.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o libtest libtest.o $(LIBS)
 
-libtest1: libtest1.o $(ASCLIB)
+libtest1: libtest1.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o libtest1 libtest1.o $(LIBS)
 
-libdirecttest: libdirecttest.o $(ASCLIB)
+libdirecttest: libdirecttest.o $(ACCUMLIB)
 	$(CPP) $(CFLAGS) -o libdirecttest libdirecttest.o $(LIBS)
 
 clean:
