Minor fixes to make the project build more easily
Apparently newer versions of g++ will attempt to build PIEs
(position-independent code) automatically unless you tell them not to,
which is a problem because DCLXVI is not position-independent. I added
-no-pie to CFLAGS to fix this, and also fixed a few sources of compiler
and Make warnings.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,16 +4,16 @@ SUBDIRS=utils bilinear algorithms suffix flint
 .PHONY:	asclib $(SUBDIRS)
 
 all:
-	make asclib
+	$(MAKE) asclib
 
 asclib: $(SUBDIRS)
 
 $(SUBDIRS):
-	make -C $@
+	$(MAKE) -C $@
 
-clean:	
+clean:
 	rm -f *.a
 	@for i in $(SUBDIRS); \
 	do \
-		(cd $$i ; make clean ;)\
+		(cd $$i ; $(MAKE) clean ;)\
 	done;
