Cleanup, removed hidden dependency on OpenSSL
Removed some obsolete files, fixed the root Makefile's failure to
specify the fact that "test" depends on "lib," and clarified the
Crypto++ dependency in the README. Also rewrote Duy Nguyen's MySHA256
helper class to use Crypto++ instead of OpenSSL for its SHA256
implementation, thus removing the dependency on OpenSSL (which I didn't
actually realize this code had).

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,12 +1,12 @@
 
 SUBDIRS=utils bilinear algorithms suffix flint
 
-.PHONY:	asclib $(SUBDIRS)
+.PHONY:	accumlib $(SUBDIRS)
 
 all:
-	$(MAKE) asclib
+	$(MAKE) accumlib
 
-asclib: $(SUBDIRS)
+accumlib: $(SUBDIRS)
 
 $(SUBDIRS):
 	$(MAKE) -C $@
